--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>THIS IS A CARD ANIMATION SITE</h1>
+    <h1>THIS IS A CARD ANIMATION SITE with feature 1</h1>
     <div class="wrapper">
         <div class="container">
             <input type="radio" name="slide" id="c1">
