feature heading added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>THIS IS A CARD ANIMATION SITE with feature 1</h1>
 
     <h1>THIS IS A CARD ANIMATION SITE with MAIN</h1>
+    <h1>added feature heading</h1>
 
     <div class="wrapper">
         <div class="container">
